--- a/app/src/main/res/layout/fragment_feed_back.xml
+++ b/app/src/main/res/layout/fragment_feed_back.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
-    tools:context=".FeedBackFragment">
+    tools:context=".feedback.FeedBackFragment">
 
 
     <com.google.android.material.textfield.TextInputLayout
