--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="end"
                 android:layout_marginEnd="10dp"
-                android:src="@drawable/ic_search"
-                android:visibility="gone" />
+                android:src="@drawable/light_mode" />
         </androidx.appcompat.widget.Toolbar>
         <!-- Main content area with NavHostFragment -->
         <androidx.fragment.app.FragmentContainerView
