--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="10dp"
     tools:context=".WelcomeFragment">
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:src="@drawable/onboarding" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tlCustomName"
@@ -24,6 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
         android:text="Get Started"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:cornerRadius="5dp" />
 </LinearLayout>
