--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -17,12 +17,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nameInput"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="20dp"
             android:hint="Note Title"
+            android:textColorHint="@color/black"
+            android:background="#FEF7FF"
             android:inputType="text"
             android:maxLines="2" />
 
@@ -33,6 +36,9 @@
             android:hint="Note Description"
             android:layout_marginTop="10dp"
             android:inputType="text"
+            android:textColorHint="@color/black"
+            android:background="#FEF7FF"
+
             android:maxLines="5" />
     </LinearLayout>
 
