--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -26,6 +26,7 @@
         android:gravity="center"
         android:text="Notes App"
         android:textColor="#56ACE0"
+        android:background="@color/white"
         android:textSize="23sp"
         android:textStyle="bold" />
 
