--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="10dp"
+    android:layout_margin="15dp"
     tools:context=".WelcomeFragment">
 
 
@@ -26,6 +26,7 @@
             android:id="@+id/etCustomName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textColor="#6B646F"
             android:hint="Enter Nick Name *" />
     </com.google.android.material.textfield.TextInputLayout>
 
