--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -7,5 +7,9 @@
         android:id="@+id/nav_feedback"
         android:icon="@drawable/ic_send"
         android:title="Feedback" />
+    <item
+        android:id="@+id/nav_logout"
+        android:icon="@drawable/ic_logout"
+        android:title="Logout" />
 
 </menu>
