--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".home.HomeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -16,12 +17,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/layout_user_notes" />
 
-    <com.google.android.material.textview.MaterialTextView
+    <ImageView
         android:id="@+id/tvNoNotes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="244dp"
+        android:adjustViewBounds="true"
         android:gravity="center"
+        android:src="@drawable/ic_no_record"
         android:text="No Notes"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/addNotes"
