--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -3,10 +3,15 @@
     <group
         android:id="@+id/group"
         android:checkableBehavior="single" />
+
     <item
         android:id="@+id/nav_feedback"
         android:icon="@drawable/ic_send"
         android:title="Feedback" />
+    <item
+        android:id="@+id/nav_dayNight"
+        android:icon="@drawable/light_mode"
+        android:title="Day/Night Theme" />
     <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/ic_logout"
